Fix alignment of logo with header text

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center; 
-    max-width: 1046px;
+    max-width: 1096px;
     padding: 0 25px;
 }
 
@@ -41,6 +41,7 @@ nav > ul {
     justify-self: stretch;
     flex-wrap: wrap;
     max-width: 1046px;
+    row-gap: 25px;
     margin: 0px;
 
 }
@@ -52,9 +53,10 @@ nav > ul {
 
 nav > ul > li {
     flex: 1 0 auto;
+    font-size: 18px;
     text-align: center;
     gap: 25px;
-    padding-top: 5px;
+    padding: 5px 5px 5px 0;
 }
 
 #logo {
